RESOLVED FIXED203022
Fix the internal macOS build after r251171
https://bugs.webkit.org/show_bug.cgi?id=203022
Summary Fix the internal macOS build after r251171
Wenson Hsieh
Reported 2019-10-15 20:21:42 PDT
r251171 breaks the internal macOS Catalina build.
Attachments
Patch (12.57 KB, patch)
2019-10-15 21:22 PDT, Wenson Hsieh
no flags
For EWS (12.46 KB, patch)
2019-10-15 21:44 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-10-15 21:04:16 PDT
It would seem that <HIServices/AccessibilityPriv.h> is exposed via the ApplicationServices framework. Though I might be missing something here (I probably am :/)
Wenson Hsieh
Comment 2 2019-10-15 21:22:51 PDT
mitz
Comment 3 2019-10-15 21:34:05 PDT
Comment on attachment 381052 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=381052&action=review > Source/WebKit/Platform/spi/mac/ApplicationServicesSPI.h:33 > +#pragma clang diagnostic ignored "-Wundef" Is this still needed? The location ApplicationServicesPriv.h is being imported from should be recognized as a system header location and therefore exempt from warnings. > Source/WebKit/Platform/spi/mac/ApplicationServicesSPI.h:59 > +extern AXClientType _AXGetClientForCurrentRequestUntrusted(void); I know that this is just being moved around, but normally we keep function declarations outside the #if/#else/#endif since it’s harmless to repeat a declaration and it gives us extra protection in case the declaration in the private header changes.
Wenson Hsieh
Comment 4 2019-10-15 21:41:23 PDT
Comment on attachment 381052 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=381052&action=review Thanks for the review! >> Source/WebKit/Platform/spi/mac/ApplicationServicesSPI.h:33 >> +#pragma clang diagnostic ignored "-Wundef" > > Is this still needed? The location ApplicationServicesPriv.h is being imported from should be recognized as a system header location and therefore exempt from warnings. Fixed! >> Source/WebKit/Platform/spi/mac/ApplicationServicesSPI.h:59 >> +extern AXClientType _AXGetClientForCurrentRequestUntrusted(void); > > I know that this is just being moved around, but normally we keep function declarations outside the #if/#else/#endif since it’s harmless to repeat a declaration and it gives us extra protection in case the declaration in the private header changes. Sounds good — moved out of the #if/#else/#endif.
Wenson Hsieh
Comment 5 2019-10-15 21:44:33 PDT
WebKit Commit Bot
Comment 6 2019-10-15 22:39:21 PDT
Comment on attachment 381053 [details] For EWS Clearing flags on attachment: 381053 Committed r251179: <https://trac.webkit.org/changeset/251179>
WebKit Commit Bot
Comment 7 2019-10-15 22:39:23 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2019-10-15 22:40:16 PDT
Note You need to log in before you can comment on or make changes to this bug.